# advent2021

./: Cargo.toml  README.md  Release.toml  Trunk.toml  index-15333b8ac1f2691b.js  index-15333b8ac1f2691b_bg.wasm  index-1fe12e040633672f.js  index-1fe12e040633672f_bg.wasm  index-3e1238acda66e2b6.js  index-3e1238acda66e2b6_bg.wasm  index-63142698a264ac0b.js  index-63142698a264ac0b_bg.wasm  index-63cea7e18ec41cd0.js  index-63cea7e18ec41cd0_bg.wasm  index-7f750eb17957e024.js  index-942d66832b8689fe.js  index-942d66832b8689fe_bg.wasm  index-b568ae60f7f973f9.js  index-b568ae60f7f973f9_bg.wasm  index-cd29d10cd8d290dd.js  index-cd29d10cd8d290dd_bg.wasm  index-e4809601ec6e1204.js  index-e4809601ec6e1204_bg.wasm  index-e747d02f9c86bad7.js  index-e747d02f9c86bad7_bg.wasm  index.html  main-1fa37962a519b024.css  main-695af59578975933.css  main-c813297f6166cefa.css  rust-toolchain.toml
advent2021-bin/: Cargo.toml
advent2021-bin/benches/: benchmark_day00.rs
advent2021-bin/src/: lib.rs  main.rs
advent2021-lib/: Cargo.toml
advent2021-lib/benches/: benchmark_day01.rs  benchmark_day06.rs  benchmark_day1.rs  benchmark_day19.rs  benchmark_day_13.rs
advent2021-lib/src/: day00.rs  day00_template.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  lib.rs
advent2021-web/: Cargo.toml  Release.toml
advent2021-web/assets/css/: main.css
advent2021-web/src/: main.rs  web.rs
advent2021-web/src/days/: day0.rs  mod.rs
