[workspace]
members = ["advent2021-lib", "advent2021-bin", "advent2021-web"]
default-members = ["advent2021-lib", "advent2021-bin"]

[patch.crates-io]
# recap = { git = "https://github.com/droogmic/recap", branch = "clippy-fixes-0.1.2" }
recap = { path = "../recap/recap" }

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size 
# opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true
