[package]
name = "advent2021-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent2021-lib = { path = "../advent2021-lib" }
color-eyre = "0.5"
colored = "2"
indicatif = "0.15"
structopt = "0.3.5"
