[package]
name = "advent2021-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
ndarray = "0.15"
recap = "0.1.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"
env_logger = "0.9"
test-log = "0.2"

[[bench]]
name = "benchmark_day01"
harness = false

[[bench]]
name = "benchmark_day06"
harness = false
