[package]
name = "advent2021-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
cached = "0.26"
log = "0.4"
ndarray = "0.15"
pathfinding = "3.0"
recap = "0.1.2"
regex = "1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"
env_logger = "0.9"
test-log = "0.2"

[[bench]]
name = "benchmark_day01"
harness = false

[[bench]]
name = "benchmark_day06"
harness = false

[[bench]]
name = "benchmark_day19"
harness = false
