[package]
name = "advent2021"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.18"
log = "0.4"
console_log = { version = "0.2", optional = true, features = ["color"] }
wee_alloc = { version = "0.4", optional = true }

[features]
default = ["console_log", "wee_alloc"]

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size 
# opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true
