[package]
name = "advent2021-web"
version = "0.1.0"
edition = "2021"

[dependencies]
advent2021-lib = { path = "../advent2021-lib" }
console_log = { version = "0.2", optional = true, features = ["color"] }
log = "0.4"
wee_alloc = { version = "0.4", optional = true }
yew = "0.18"

[features]
default = ["console_log", "wee_alloc"]
